k8s/keycloak-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-database
  template:
    metadata:
      labels:
        app: keycloak-database
        tier: backend
    spec:
      containers:
        - name: keycloak-database
          image: postgres:9.6.6
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: keycloak-volume-mount
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: keycloak-volume-mount
          persistentVolumeClaim:
            claimName: keycloak-database-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: keycloak-database
spec:
  selector:
    app: keycloak-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: LoadBalancer
