k8s/echo-gatekeeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anything-gatekeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anything-gatekeeper
  template:
    metadata:
      labels:
        app: anything-gatekeeper
    spec:
      containers:
      - name: anything-gatekeeper
        image: keycloak/keycloak-gatekeeper
        ports:
        - name: http
          containerPort: 3000
        volumeMounts:
        - name: anything-gatekeeper-configmap-volume
          mountPath: /opt/config
        command: [ "/opt/keycloak-gatekeeper", "--config=/opt/config/keycloak-gatekeeper.yaml" ]
      volumes:
      - name: anything-gatekeeper-configmap-volume
        configMap:
          name: anything-gatekeeper-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: anything-gatekeeper
  labels:
    app: anything-gatekeeper
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: anything-gatekeeper
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: anything-gatekeeper-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /anything/oauth/authorize
        backend:
          serviceName: anything-gatekeeper
          servicePort: 80
      - path: /anything/oauth/callback
        backend:
          serviceName: anything-gatekeeper
          servicePort: 80
      - path: /anything/.*
        backend:
          serviceName: anything-gatekeeper
          servicePort: 80
