k8s/echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      restartPolicy: Always
      volumes:
      - name: echo-configmap-volume
        configMap:
          name: echo-configmap
      containers:
      - name: echo-keycloak-gatekeeper
        image: keycloak/keycloak-gatekeeper
        ports:
        - name: http
          containerPort: 3000
        volumeMounts:
        - name: echo-configmap-volume
          mountPath: /opt/config
        command: [ "/opt/keycloak-gatekeeper", "--config=/opt/config/keycloak-gatekeeper.yaml" ]
      - image: kennethreitz/httpbin
        name: echo

---
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: echo
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-oauth-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /echo/oauth
        backend:
          serviceName: echo
          servicePort: 80
      - path: /echo/.*
        backend:
          serviceName: echo
          servicePort: 80
