k8s/flask-oidc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask-oidc
  name: flask-oidc
  namespace: default
spec:
  selector:
    matchLabels:
      app: flask-oidc
  template:
    metadata:
      labels:
        app: flask-oidc
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      containers:
      - image: flaviofernandes004/flask-oidc:latest
        name: flask-oidc
        imagePullPolicy: Always
        volumeMounts:
        - name: flask-oidc-configmap-volume
          mountPath: /usr/src/config
      volumes:
      - name: flask-oidc-configmap-volume
        configMap:
          name: flask-oidc-configmap
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask-oidc
  name: flask-oidc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: flask-oidc
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-oidc-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /flask-oidc/oauth/authorize
        backend:
          serviceName: flask-oidc
          servicePort: 80
      - path: /flask-oidc/oidc_callback
        backend:
          serviceName: flask-oidc
          servicePort: 80
      - path: /flask-oidc/.*
        backend:
          serviceName: flask-oidc
          servicePort: 80
