k8s/hello-node-gatekeeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node-gatekeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-node-gatekeeper
  template:
    metadata:
      labels:
        app: hello-node-gatekeeper
    spec:
      containers:
      - name: hello-node-gatekeeper
        image: keycloak/keycloak-gatekeeper
        ports:
        - name: http
          containerPort: 3000
        volumeMounts:
        - name: hello-node-gatekeeper-configmap-volume
          mountPath: /opt/config
        command: [ "/opt/keycloak-gatekeeper", "--config=/opt/config/keycloak-gatekeeper.yaml" ]
      volumes:
      - name: hello-node-gatekeeper-configmap-volume
        configMap:
          name: hello-node-gatekeeper-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: hello-node-gatekeeper
  labels:
    app: hello-node-gatekeeper
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: hello-node-gatekeeper
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-node-gatekeeper-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /hello-node/oauth/authorize
        backend:
          serviceName: hello-node-gatekeeper
          servicePort: 80
      - path: /hello-node/oauth/callback
        backend:
          serviceName: hello-node-gatekeeper
          servicePort: 80
      - path: /hello-node/.*
        backend:
          serviceName: hello-node-gatekeeper
          servicePort: 80
